css/style.css
/* 
  SPACING SYSTEM (px)
  2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128

  FONT SIZE SYSTEM (px)
  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */

/* GENERAL */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --primary-color: #ff7b14;

  /* TINTS */
  --tint-darkest: #ff8b33;
  --tint-dark: #ff9747;
  --tint-light: #ffa35c;
  --tint-lightest: #ffe8d6;

  /* SHADES */
  --shade-dark: ##f56a00;
  --shade-darkest: #e06100;

  /* GREYS */
  --grey-darkest: #222;
  --grey-light: #999;
  --grey-lightest: #eee;
}

html {
  font-size: 62.5%;
}

body {
  /* background-image: url("/img/bg_img_2_16_9.jpg"); */
  background-color: var(--grey-lightest);
  font-family: "Inter", sans-serif;
}

.container {
  margin: 0 9.6rem;
}

/* PAGE CONTAINER */
.page-box {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.the-page {
  position: relative;
  background-color: white;
  width: 120rem;
  /* height: 75rem; */
  border-radius: 5px;
  box-shadow: 1rem 2rem 2.5rem 0 rgba(0, 0, 0, 0.1);
}

/* HEADER */
.header {
  color: var(--grey-light);
  margin-bottom: 8rem;
}

.header .container,
.nav-list {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 4.8rem;
}

.header .container {
  font-size: 1.4rem;
  padding: 2.4rem 0 3.2rem 0;
  border-bottom: 3px solid var(--grey-lightest);
}

.nav-list {
  list-style: none;
}

.nav-link:link,
.nav-link:visited {
  text-decoration: none;
  color: var(--grey-light);
  transition: all 0.3s;
}

.nav-link:hover,
.nav-link:active {
  color: var(--primary-color);
}

#logo {
  text-transform: lowercase;
  color: var(--grey-darkest);
  font-family: "Josefin Sans", sans-serif;
  font-size: 3.6rem;
  font-weight: 700;
  letter-spacing: -3px;
  background-color: white;
}

.cart {
  font-size: 2.4rem;
  margin-left: auto;
  display: flex;
  align-items: center;
}

.profile-img {
  border-radius: 50%;
  width: 4.4rem;
  height: 4.4rem;
  border: 3px solid var(--grey-lightest);
  cursor: pointer;
  transition: all 0.3s;
}

.profile-img:hover {
  border: 3px solid var(--primary-color);
}

/* MAIN */
.main {
  margin: 0 3.6rem;
}

.main .container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 9.6rem;
  margin-bottom: 9.6rem;
}

.item-img--main {
  width: 37rem;
  height: 37rem;
  margin-bottom: 1.6rem;
  border-radius: 11px;
  cursor: pointer;
}

.images-small {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.item-img-small {
  width: 20%;
  height: 20%;
  border-radius: 11px;
  border: 3px solid rgba(0, 0, 0, 0);
  cursor: pointer;
  transition: all 0.3s;
}

.item-img-small:hover {
  border: 3px solid var(--shade-darkest);
  opacity: 0.3;
}

.item-box {
  display: flex;
  flex-direction: column;
}

.subheading {
  text-transform: uppercase;
  color: var(--shade-darkest);
  font-weight: 600;
  font-size: 1.2rem;
  margin-bottom: 1.2rem;
}

.heading-primary {
  font-weight: 700;
  font-size: 3rem;
  margin-bottom: 1.6rem;
}

.item-desc {
  font-size: 1.2rem;
  line-height: 1.6;
  margin-bottom: 1.6rem;
}

.price-box {
  width: 50%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-items: start;
  row-gap: 0.8rem;
  margin-bottom: 1.6rem;
}

.current-price {
  font-weight: 700;
  font-size: 1.8rem;
}

.discount {
  color: var(--shade-darkest);
  background-color: var(--tint-lightest);
  font-weight: 600;
  padding: 0.3rem 0.6rem;
  border-radius: 3px;
}

.regular-price {
  color: var(--grey-light);
  text-decoration-line: line-through;
}

.purchase-box {
  display: flex;
  gap: 1.2rem;
}

.amount-selection {
  display: flex;
  align-items: center;
  gap: 1.2rem;
  border-radius: 9px;
  background-color: var(--grey-lightest);
  overflow: hidden;
}

.amount-change,
.amount {
  font-weight: 700;
  font-size: 2.4rem;
  color: var(--shade-darkest);
  padding: 0.8rem;
}

.amount-change {
  cursor: pointer;
  transition: all 0.3s;
}

.amount-change:hover {
  background-color: var(--grey-light);
  color: white;
}

.amount {
  color: var(--grey-darkest);
  font-size: 1.4rem;
}

.add-to-cart {
  color: white;
  background-color: var(--primary-color);
  border: none;
  font-size: 1.2rem;
  padding: 0 4.8rem;
  border-radius: 9px;
  cursor: pointer;
  transition: all 0.4s;
  display: flex;
  align-items: center;
  justify-content: center;
}

.add-to-cart:hover {
  background-color: var(--shade-darkest);
}

.btn-flex {
  display: flex;
  align-items: center;
  gap: 1.2rem;
}

.btn-flex ion-icon {
  font-size: 1.8rem;
}

/* MODAL */
.hidden {
  display: none;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  backdrop-filter: blur(3px);
  z-index: 5;
}

.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0.7);
  z-index: 10;
}

.close-modal {
  display: block;
  margin-left: auto;
  color: white;
  background-color: rgba(0, 0, 0, 0);
  border: none;
  font-size: 3.6rem;
  padding: 1.2rem 0;
  cursor: pointer;
}

.main-img-container {
  position: relative;
}

.modal .item-img--main {
  cursor: auto;
}

.modal ion-icon {
  position: absolute;
  width: 6.4rem;
  height: 6.4rem;
  fill: white;
  top: 50%;
  transform: translate(-50%, -50%);
  cursor: pointer;
}

.modal .images-small {
  padding: 3.2rem 3.2rem;
}

.modal .item-img--main {
  width: 100%;
  height: 100%;
}

@media (max-width: 1052px) {
  html {
    font-size: 50%;
  }

  .item-img--main {
    width: 39rem;
    height: 39rem;
  }
}

@media (max-width: 829px) {
  html {
    font-size: 40%;
  }

  .item-img--main {
    width: 44rem;
    height: 44rem;
  }
}

@media (max-width: 829px) {
  html {
    font-size: 30%;
  }

  .item-img--main {
    width: 50rem;
    height: 50rem;
  }
}

@media (max-width: 425px) {
  html {
    font-size: 50%;
  }

  .container {
    margin: 0 2.4rem;
  }

  .the-page {
    width: 40rem;
    border-radius: 0;
  }

  /* HEADER */
  .header {
    margin-bottom: 0;
  }

  .header .container {
    border: none;
    gap: 1.6rem;
    padding: 2.4rem 0;
  }

  .hamburger-line {
    width: 1.9rem;
    height: 0.4rem;
    background-color: var(--grey-light);
    margin: 0.3rem 0;
  }

  .nav-list {
    gap: 1.6rem;
  }

  .nav-link:not(#logo):not(.cart) {
    display: none;
  }

  .cart {
    font-size: 3rem;
  }

  .profile-img {
    width: 3.2rem;
    height: 3.2rem;
  }

  /* MAIN */
  .main {
    margin: 0;
  }

  .main .container {
    flex-direction: column;
    gap: 0;
    margin: 0;
  }

  .item-img--main {
    width: 100%;
    height: 100%;
    margin-bottom: 1.6rem;
    border-radius: 0px;
    cursor: pointer;
  }

  .images-small {
    display: none;
  }

  .item-box {
    margin: 0 2.4rem;
  }

  .item-desc {
    font-size: 1.6rem;
    line-height: 1.8;
  }

  .price-box {
    width: 100%;
    display: flex;
    gap: 1.6rem;
    margin-bottom: 2.4rem;
  }

  .current-price {
    font-size: 3rem;
  }

  .discount {
    font-size: 1.6rem;
  }

  .regular-price {
    margin-left: auto;
    font-size: 1.6rem;
  }

  .purchase-box {
    flex-direction: column;
  }

  .amount-selection {
    justify-content: space-between;
  }

  .amount-change,
  .amount {
    padding: 1.2rem;
  }

  .amount {
    font-size: 2rem;
  }

  .add-to-cart {
    font-size: 1.8rem;
    padding: 2.4rem 0;
    margin-bottom: 9.6rem;
  }

  .btn-flex ion-icon {
    font-size: 2.4rem;
  }
}

